# tally

./: MIGRATION.md  PRODUCT-NAMING.md  TAL-105-IMPLEMENTATION.md  TAL-110-IMPLEMENTATION.md  TAL-135-IMPLEMENTATION.md  TAL-140-IMPLEMENTATION.md  TAL-162-IMPLEMENTATION.md  TAL-170-IMPLEMENTATION.md  index.html  package-lock.json  package.json  vite.config.ts  vite.desktop.config.ts  vitest.config.ts
.archive/: TAL-103-IMPLEMENTATION.md  TAL-104-IMPLEMENTATION.md  TAL-134-IMPLEMENTATION.md  TAL-141-COMPLETION.md  TAL-170-COMPLETION.md  TAL-210-COMPLETION.md
docs/: ACCOUNTANT-PORTAL.md  PDF_EXPORT.md  TAL-102-number-extraction.md  TAL-111-IMPLEMENTATION.md  TAL-130-IMPLEMENTATION.md  TAL-250-NAVIGATION-SPEC.md
public/: bank-connection-demo.html
src/: desktop.tsx  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: invoice.rs  lib.rs  ocr.rs  tax_report.rs
src/components/: ATOPrefillExport.tsx  AccountantPortalShare.tsx  AddReceiptDialog.tsx  AnalyticsDashboard.tsx  AppSettings.tsx  BulkActionBar.tsx  CSVExportDialog.tsx  CameraCapture.tsx  CategoryBreakdownChart.tsx  ConfidenceIndicator.tsx  DataImportDialog.tsx  DeleteReceiptDialog.tsx  DocumentUpload.tsx  EmptyState.tsx  FileUpload.tsx  IncomeManager.tsx  InvoiceUploadDialog.tsx  MonthlySpendingGraph.tsx  OcrReviewDialog.tsx  OcrScanButton.tsx  PDFExportDialog.tsx  ReceiptDetailDialog.tsx  ReceiptImageGallery.tsx  ReceiptListView.tsx  ReceiptSearchFilters.tsx  ReviewStatusBadge.tsx  ReviewStatusDialog.tsx  TaxCategoriesManager.tsx  TaxOptimizationDashboard.tsx  index.ts  (+2 more)
(+347 files in other folders)
