[package]
name = "tally-desktop"
version = "1.0.0"
description = "Tally - Australian Tax Receipt Management"
authors = ["Tally"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
chrono = "0.4"
regex = "1.10"
dirs = "5.0"

# PDF parsing (optional feature)
pdf-extract = { version = "0.7", optional = true }

[features]
default = []
pdf-parse = ["pdf-extract"]
